Fix for the sky of stars: Removed the overflow on the `x` axis while preserving it on the `y` axis.

--- a/src/components/StarSky/StarSky.css
+++ b/src/components/StarSky/StarSky.css
@@ -1,10 +1,19 @@
 /* --- Stars sky ---------------------------------------------------------------------------------------------------- */
-.stars-sky {
+/* -- Wrapper -- */
+.stars-sky-wrapper {
 	position: absolute;
 	top: 0;
 	right: 0;
 	bottom: 0;
 	left: 0;
+	overflow-y: visible;
+}
+
+/* -- Container -- */
+.stars-sky {
+	width: 100%;
+	height: 100%;
+	overflow-x: hidden;
 }
 
 /* // Printer */
